# OverSeer

./: .golangci.yml  Makefile  README.md  go.mod
.github/workflows/: ci.yml
cmd/agent/: main.go  replay_test.go  source_linux.go  source_other.go
cmd/scheduler/: main.go
deploy/: crd.yaml  daemonset.yaml  rbac.yaml
internal/agent/: agent.go
internal/publisher/: crd.go  http.go  publisher.go
pkg/features/: compute.go  compute_test.go  features.go  features_test.go
pkg/interference/: interference.go  interference_test.go
pkg/nodestate/: nodestate.go  nodestate_test.go
pkg/pmu/: collector.go  events.go  perf_linux.go  pmu.go  pmu_test.go  replay.go
pkg/regime/: regime.go
pkg/topology/: discover.go  helpers.go  topology.go  topology_test.go
testdata/replay/: trace.ndjson
training/: README.md  __init__.py  pyproject.toml
training/tests/: test_placeholder.py
